# RockPaperScissorsGame

./: .gitignore  README.md  main.py  pyproject.toml
game/: camera.py  controller.py  model.py
game/engine/: __init__.py  game.py  rules.py
game/inference/: __init__.py  base.py  detector.py  predictor.py  utils.py
game/inferfaces/capture/: __init__.py  base.py  camera.py
game/inferfaces/render/: __init__.py  base.py  opencv_overlay.py
model/: README.md  infer.py  inspect_metrics.py  train.py
tests/: context.py  test_detector.py  test_engine.py  test_predictor.py
