[tool.poetry]
name = "rockpaperscissorsgame"
version = "0.1.0"
description = ""
authors = ["Pascal <mup0117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=2,<2.3.0"
matplotlib = "^3.10.6"
pygame = "^2.6.1"
pymunk = "^7.1.0"
tensorflow = "^2.20.0"
tensorflow-datasets = "^4.9.9"
opencv-python = "^4.12.0.88"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
