[tool.poetry]
name = "rockpaperscissorsgame"
version = "0.1.0"
description = ""
authors = ["Pascal <mup0117@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
numpy = ">=2,<2.3.0"
matplotlib = "^3.10.6"
pygame = "^2.6.1"
pymunk = "^7.1.0"
tensorflow-datasets = "^4.9.9"
opencv-python = "^4.12.0.88"
torch = {version = "^2.9.1+cu126", source = "pytorch-cu126"}
torchvision = {version = "^0.24.1+cu126", source = "pytorch-cu126"}
jupyterlab = "^4.5.1"
pandas = "^2.3.3"
pytorch-lightning = "^2.6.0"
pylint = "^4.0.4"
mediapipe = "0.10.14"

[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
